Add some new features

--- a/Zombie Project/style.css
+++ b/Zombie Project/style.css
@@ -2,9 +2,6 @@ li{
     list-style:none;
 }
 
-
-
-
 body {
    margin:0;
    padding:0;
@@ -31,7 +28,9 @@ footer {
 * {
     box-sizing: border-box;
 }
-
+.navbar-brand{
+  
+}
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
