--- a/Zombie Project/style.css
+++ b/Zombie Project/style.css
@@ -4,6 +4,7 @@ li{
 body {
    margin:0;
    padding:0;
+   background-image: "images/zombie.jpg"; 
 }
 container {
    min-height:100%;
@@ -27,9 +28,7 @@ footer {
 * {
     box-sizing: border-box;
 }
-.navbar-brand{
-  
-}
+
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
@@ -94,7 +93,8 @@ input[type=submit]:hover {
 .table-inverse {
     color: #fff;
     background-color: #292b2c;
-    border-radius: 15px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
     padding: 15px;
     background: #292b2c;
     margin: 15px;
@@ -107,4 +107,8 @@ input[type=submit]:hover {
 
 div > #testy{
     background-color: #6cf;
+}
+
+.LI:hover{
+    background: purple;
 }
